<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backblue"
    tools:context=".AddRoutineActivity">

    <Spinner
        android:id="@+id/DaySelectSpinner"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

    </Spinner>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/FirstPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/edtTxt1"
                    android:hint="@string/HINT"
                    android:background="#a229e410"
                    android:padding="6dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/SecondPeriod"
                    android:layout_weight="1"
                    android:textColor="#ecf0f4"
                    android:background="#82ff161d"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/edtTxt2"
                    android:hint="@string/HINT"
                    android:padding="6dp"
                    android:gravity="center"
                    android:background="#a229e410"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/ThirdPeriod"
                    android:layout_weight="1"
                    android:textColor="#ecf0f4"
                    android:background="#82ff161d"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/edtTxt3"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:padding="6dp"
                    android:background="#a229e410"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/FourthPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/edtTxt4"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:padding="6dp"
                    android:background="#a229e410"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/FifthPeriod"
                    android:layout_weight="1"
                    android:textColor="#ecf0f4"
                    android:background="#82ff161d"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/edtTxt5"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:padding="6dp"
                    android:background="#a229e410"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/SixthPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/edtTxt6"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:padding="6dp"
                    android:background="#a229e410"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/SeventhPeriod"
                    android:background="#82ff161d"
                    android:layout_weight="1"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtTxt7"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="6dp"
                    android:background="#a229e410"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/EighthPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtTxt8"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:padding="6dp"
                    android:layout_weight="1"
                    android:background="#a229e410"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/NinthPeriod"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtTxt9"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:background="#a229e410"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:textStyle="bold"
                android:id="@+id/btnAddRoutine"
                android:text="@string/AddRutine"
                android:background="#ae1d8f06"
                android:textAllCaps="false"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_margin="20dp"/>

            <Button
                android:textStyle="bold"
                android:id="@+id/btnClearRoutine"
                android:text="Clear Inputs"
                android:textColor="#f4f6f9"
                android:textAllCaps="false"
                android:layout_width="200dp"
                android:background="#dff23921"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_margin="20dp"/>

            <Button
                android:textStyle="bold"
                android:id="@+id/btnLoadRoutine"
                android:text="Load Routine"
                android:textAllCaps="false"
                android:layout_width="200dp"
                android:background="#812e72e7"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_margin="30dp"/>




        </LinearLayout>


    </ScrollView>

</LinearLayout>