<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backblue"
    tools:context=".ShowRoutineActivity">
    <Spinner
        android:id="@+id/DaySelectSpinner2"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

    </Spinner>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/FirstPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txtView1"
                    android:text="text"
                    android:textSize="20sp"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="#fe0101"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/SecondPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:layout_marginRight="10dp"
                    android:textColor="#ecf0f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txtView2"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#fe0101"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/ThirdPeriod"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txtView3"
                    android:hint="@string/HINT"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:textColor="#fe0101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/FourthPeriod"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="#82ff161d"
                    android:layout_width="match_parent"
                    android:textColor="#ecf0f4"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txtView4"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:textColor="#fe0101"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/FifthPeriod"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txtView5"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#fe0101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/SixthPeriod"
                    android:layout_weight="1"
                    android:background="#82ff161d"
                    android:layout_marginRight="10dp"
                    android:textColor="#ecf0f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/txtView6"
                    android:hint="@string/HINT"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#fe0101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:textStyle="bold"
                    android:text="@string/SeventhPeriod"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="#82ff161d"
                    android:textColor="#ecf0f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtView7"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#fe0101"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/EighthPeriod"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#ecf0f4"
                    android:background="#82ff161d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtView8"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#fe0101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/NinthPeriod"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="#82ff161d"
                    android:textStyle="bold"
                    android:textColor="#ecf0f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtView9"
                    android:hint="@string/HINT"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="#a229e410"
                    android:padding="10dp"
                    android:textColor="#fe0101"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            

          




        </LinearLayout>


    </ScrollView>
    
</LinearLayout>